fix(nav): maintain consistent width on mobile and tablet, enable vertical scroll

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -234,8 +234,8 @@ a.nav-text:hover {
 		top: 4.5rem;
 		background: transparent;
 		background-color: var(--color-primary-light);
-		width: 95vw !important;
-		max-width: calc(100vw - 1rem) !important;
+		width: 95vw;
+		max-width: calc(100vw - 1rem);
 		max-height: 70vh;
 		overflow-y: auto;
 		overflow-x: hidden;
